k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-python-app
  labels:
    app: devops-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-python-app
  template:
    metadata:
      labels:
        app: devops-python-app
    spec:
      containers:
        - name: app
          image: menmor/devops-python-app:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
